# raithe-se

./: .gitignore  .~lock.README.md#  Cargo.toml  LICENSE.md  README.md  critical_fixes_DEF-001_to_006.patch  raithe.sh
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/tests/: end_to_end.rs  persistence.rs
crates/common/: Cargo.toml
crates/common/src/: document_id.rs  embedding.rs  lib.rs  query_types.rs  simhash.rs  timestamp.rs  url_type.rs
crates/config/: Cargo.toml
crates/config/src/: crawler.rs  engine.rs  indexer.rs  lib.rs  neural.rs  ranker.rs  scraper.rs  serving.rs  watcher.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: frontier.rs  lib.rs  policy.rs  robots.rs
crates/freshness/: Cargo.toml
crates/freshness/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/benches/: indexer_throughput.rs
crates/indexer/src/: lib.rs
crates/instant/: Cargo.toml
crates/instant/src/: lib.rs
crates/linkgraph/: Cargo.toml
crates/linkgraph/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/neural/: Cargo.toml
crates/neural/benches/: neural_embed_latency.rs
crates/neural/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/query/: Cargo.toml
crates/query/benches/: query_latency.rs
crates/query/src/: lib.rs
crates/ranker/: Cargo.toml
crates/ranker/benches/: ranker_latency.rs
crates/ranker/src/: lib.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: lib.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs
crates/serving/: Cargo.toml
crates/serving/src/: lib.rs  templates.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: backup.rs  crawl_log.rs  doc_store.rs  lib.rs  mmap_file.rs  url_registry.rs
data/: seeds.txt  url_registry.db  url_registry.db-shm  url_registry.db-wal
data/config/: dev.toml  engine.toml
data/docs/: ENGINEERING_SPEC.md
data/models/: README.md
