# © RAiTHE INDUSTRIES INCORPORATED 2026
[package]
name        = "raithe-common"
description = "Shared primitive types — no logic, no I/O, no async"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
url       = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
