# © RAiTHE INDUSTRIES INCORPORATED 2026
[package]
name        = "raithe-instant"
description = "Instant answers — arithmetic, conversions, currency, time zones"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
raithe-common  = { path = "../common" }
raithe-config  = { path = "../config" }
evalexpr       = { workspace = true }
thiserror      = { workspace = true }
