# © RAiTHE INDUSTRIES INCORPORATED 2026
[package]
name        = "raithe-linkgraph"
description = "Compressed CSR link graph + iterative PageRank"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
raithe-common  = { path = "../common" }
raithe-config  = { path = "../config" }
raithe-storage = { path = "../storage" }
thiserror      = { workspace = true }
