# © RAiTHE INDUSTRIES INCORPORATED 2026
[package]
name        = "raithe-metrics"
description = "Prometheus registry and tracing initialisation"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
raithe-common      = { path = "../common" }
prometheus         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
thiserror          = { workspace = true }
