# © RAiTHE INDUSTRIES INCORPORATED 2026
[package]
name        = "raithe-parser"
description = "Raw HTML bytes → ParsedDocument"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
raithe-common  = { path = "../common" }
raithe-config  = { path = "../config" }
raithe-scraper = { path = "../scraper" }
lol_html       = { workspace = true }
scraper        = { workspace = true }
unicode-segmentation = { workspace = true }
thiserror      = { workspace = true }
